--- a/ZooSite/Views/Shared/_Layout.cshtml
+++ b/ZooSite/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+    <link type="text/css" rel="stylesheet" href="~/css/zoo-style.css" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
 </head>
