--- a/ZooSite/Views/Shared/_Layout.cshtml
+++ b/ZooSite/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <link type="text/css" rel="stylesheet" href="~/css/zoo-style.css" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <script src="~/node_modules/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
     <ul class="nav">
