--- a/ZooSite/Views/Zoo/BuyTickets.cshtml
+++ b/ZooSite/Views/Zoo/BuyTickets.cshtml
@@ -102,5 +102,5 @@
 </div>
 
 @section Scripts {
-    <script src="~/js/form-functions.js" />
+    <script src="~/js/form-functions.js"></script>
     }
