End of Exercise 4, Task 5

--- a/ZooSite/Views/Shared/_Layout.cshtml
+++ b/ZooSite/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <script src="~/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/menubar-functions.js"></script>
+    <script src="~/js/slider-functions.js"></script>
 </head>
 <body>
     <ul class="nav">
@@ -30,7 +32,7 @@
 
     <div>
         @RenderBody()
-        @RenderSection("Scripts", false)
     </div>
+    @RenderSection("Scripts", false)
 </body>
 </html>
